[package]
name = "rbp-rodio-bug"
version = "0.1.0"
authors = ["Philippe GASSMANN <philippe.gassmann@linkfluence.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio={version="0.13", default_features=false, features=["wav"]}
cpal="0.13"

[profile.release]
debug = true
panic = "abort"

#[profile.dev]
#panic = "abort"
